# PoT

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE_COMPLETE.md  BENCHMARKS_STATUS.md  BENCHMARK_RESULTS.md  CITATION.cff  CODE_OF_CONDUCT.md  COLAB_COMMANDS.txt  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  Connect_Four_AB_Test_Colab.ipynb  DEEP_SUPERVISION_GUIDE.md  DIMINISHING_RETURNS_ANALYSIS.md  IMPROVEMENTS_SUMMARY.md  JOURNEY_SUMMARY.md  LICENSE  Makefile  NEXT_EXPERIMENTS.md  NLI_EXPERIMENT_GUIDE.md  PATCHES_NEEDED.md  POH_FIX_SUMMARY.txt  PRODUCTION_SCRIPTS_SUMMARY.md  PoT_Colab.ipynb  QUICK_START.md  QUICK_START_IMPROVEMENTS.md  README.md  README_REFACTORED.md  REFACTORING_SUMMARY.md  RUN_GRID2GRID_COLAB.py  RUN_POH_COLAB_DIRECT.py  RUN_POH_FIXED.py  RUN_POH_ONLY_COLAB.py  RUN_PROPER_MAZE.sh  SECURITY.md  SESSION_SUMMARY.md  TEST_RESULTS.md  ab_ud_pointer_vs_baseline.py  count_params.py  monitor_proper_experiments.sh  (+11 more)
.github/: pull_request_template.md
archive/: RUN_GRID2GRID_COLAB.py  ud_pointer_parser.py
configs/: default.yaml
docs/: GRADIENT_MODES_THEORY.md  HRM_QUICKSTART.md  HRM_VS_REFINEMENT_LOOPS.md  INNER_VS_OUTER_ITERATIONS.md  POH_DECISION_FLOWCHART.md  POH_ITERATION_GUIDE.md  POH_NLP_TASK_SUITABILITY.md  README.md  REPRODUCE_SUDOKU_78.md  TERMINOLOGY_GUIDE.md  UD_PARSER_TESTING.md  api_reference.md  architecture.md  hrm_integration.md  hrm_testing.md  usage_guide.md
examples/: basic_training.py  hrm_controller_demo.py  poh_gpt_usage.py  poh_usage.py  trm_mode.py
experiments/: CRITICAL_BUGS_FIXED.md  FAIR_AB_PROTOCOL.md  FINAL_AB_RESULTS.md  GENUINELY_HARD_RESULTS.md  HARD_REGIMES_RESULTS.md  HRM_FULL_IMPLEMENTATION_PLAN.md  ITERATION_SWEEP_RESULTS.md  LENGTH_SCALING_TABLE.md  LOCAL_INVESTIGATION_README.md  MAZE_BENCHMARK_SUMMARY.md  POINTER_DECODER_RESULTS.md  RESULTS_AT_A_GLANCE.md  SCALING_EXPERIMENT_SUMMARY.md  SORTING_RESULTS.md  TRAINING_ENHANCEMENTS.md  analyze_maze_hyperparam_results.py  arc_ab_test.py  arc_poh_benchmark.py  blocksworld_pot_benchmark.py  blocksworld_ppo_benchmark.py  compare_ab_results.py  connect_four_ab_test.py  fair_ab_comparison.py  fair_ab_lm.py  fair_ab_nli.py  find_optimal_R_T_real_nli.py  grid2grid_ab_test.py  hard_sorting_regimes.py  huge_500m_benchmark.py  improved_trainer.py  maze_ab_proper_generation.py  maze_ab_test.py  maze_grid2grid_hrm.py  maze_hyperparam_search.py  maze_poh_benchmark.py  maze_scaling_benchmark.py  nli_ab_test.py  nli_hybrid_benchmark.py  noisy_toposort.py  parameter_scaling_benchmark.py  (+25 more)
notebooks/: ARC2_PoH_Benchmark.ipynb  Blocksworld_PPO_Colab.ipynb  Connect_Four_AB_Test_Colab.ipynb  Diffusion_Sudoku_Training_Colab.ipynb  Diffusion_controller_Sudoku_Training_Colab.ipynb  Feature_Injection_Ablation_Colab.ipynb  Full_Diffusion_Sudoku_Training_Colab.ipynb  HRM_Grid2Grid_Benchmark.ipynb  HRM_vs_PoT_Maze30_Colab.ipynb  Mamba_Sudoku_Training_Colab.ipynb  Maze_AB_Test_Colab.ipynb  Maze_Proper_Generation_Colab.ipynb  Maze_Scaling_Benchmark_Colab.ipynb  Parameter_Scaling_Benchmark_Colab.ipynb  PoH_GPT_AB_Test.ipynb  PoH_NLI_Benchmark.ipynb  PoH_TRM_Maze30_Colab.ipynb  PoT_Colab.ipynb  PoT_continues_training_maxhalt2.ipynb  PoT_ray_firstphase.ipynb  README.md  Sokoban_PPO_Colab.ipynb  Sokoban_Supervised_Colab.ipynb  Sudoku_PoH_Benchmark.ipynb  Swin_Sudoku_Training_Colab.ipynb  broadcast_transformer_last.ipynb  memory_injection_experiment.ipynb  memory_injection_last.ipynb  multi_game_last.ipynb  token_conditioned_last.ipynb  token_conditioned_memory_last.ipynb  train_sudoku_controllers.ipynb
scripts/: analyze.py  build_arc_dataset.py  compare_controllers.py  generate_results_plot.py  make_readme_tables.py  optuna_depth_search.py  plot_ab_results.py  plot_inner_vs_outer.py  plot_results.py  run.py  run_ablations.py  run_multiseed.sh  simple_plot.py  sokoban_live_game.py  train.py  train_diffusion_sudoku.py  train_simple.py  train_sudoku_lstm.py  train_sudoku_swin.py  train_sudoku_transformer.py
src/: __init__.py
tests/: conftest.py  test_core.py  test_depth_transformer_controller.py  test_diffusion_hl_cycles.py  test_feature_injection.py  test_hrm_pointer_controller.py  test_imports.py  test_lstm_controllers.py  test_models.py  test_poh_modules.py  test_stability_probes.py  test_sudoku_app.py  test_ud_parser.py
tools/: count_params.py  expected_sudoku_state_dict.txt  (+10 more)
(+247 files in other folders)
