[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pot"
version = "0.1.0"
description = "Pointer-over-Heads Transformer for dependency parsing"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [ { name = "Eran Ben Artzy" } ]
dependencies = [
  "torch>=2.0.0,<3.0.0",
  "transformers>=4.35.0,<5.0.0",
  "datasets>=2.14.0,<3.0.0",
  "pandas>=2.0.0,<3.0.0",
  "matplotlib>=3.7.0,<4.0.0",
  "seaborn>=0.12.0,<1.0.0",
  "conllu>=4.5.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black",
  "mypy",
  "types-PyYAML",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = ["E203", "E266", "E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true


